[tool.poetry]
name = "dqn"
version = "0.1.0"
description = ""
authors = ["Edwardjjj"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = {extras = ["atari"], version = "^0.29.0"}
pyvirtualdisplay = "^3.0"
optuna = "^3.2.0"
numpy = "^1.25.1"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
